--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.garbage, .recycle{
+.garbage, .recycle, .compost{
   position: absolute;
   background-color: #fffff;
   border: 1px solid #d3d3d3;
@@ -10,17 +10,23 @@
   opacity: 0;
 }
 
-#trashBin, #recycleBin {
-  border: 1px solid #d3d3d3;
+#binHolders {
   text-align: center;
+  margin-right: 5%;
+  list-style-type: none;
+}
 
-  top:50px;
-  left:50px;
+#binHolders li {
+  display: inline-block;
+  margin-right: 60px;
+}
+
+#trashBin:hover, #recycleBin:hover, #compostBin:hover {
+
   width: 60px;
   height: 60px;
-  float: left;
-  margin-right: 50px;
-  line-height: 60px;
+  
+  display: inline-block; 
 }
 
 body {
@@ -52,7 +58,7 @@ nav {
   text-decoration: none;
   color: #222;
   font-size: 16px;
-  padding: 10px 15px;
+  padding: 10px 20px;
   background-color: #fff;
   border-radius: 20px;
   transition: all 0.3s ease;
@@ -64,7 +70,7 @@ nav {
 
 .clear { clear: both; }
 
-#points, #timer {
+#points, #timer, #gamebutton {
     line-height: 25px;
 }
 
