--- a/style.css
+++ b/style.css
@@ -14,11 +14,15 @@
   text-align: center;
   margin-right: 5%;
   list-style-type: none;
+  height: 60px;
 }
 
 #binHolders li {
   display: inline-block;
   margin-right: 60px;
+  width: 60px;
+  height: 60px;
+
 }
 
 #trashBin:hover, #recycleBin:hover, #compostBin:hover {
@@ -27,6 +31,16 @@
   height: 60px;
   
   display: inline-block; 
+}
+
+#trashBin:hover {
+  content: url("https://github.com/Tedtot/Tedtot.github.io/garbagecanopen.png");
+}
+#recycleBin:hover {
+  content: url("https://github.com/Tedtot/Tedtot.github.io/garbagecanopen.png");
+}
+#compostBin:hover {
+  content: url("https://github.com/Tedtot/Tedtot.github.io/garbagecanopen.png");
 }
 
 body {
